data/diff_tests/wizard-engine/call_indirect_TypeMismatchinControlFlowInstructions_4562.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8a\80\80\80\00\02\60"
    "\01\7f\01\7f\60\00\01\7f\03\82\80\80\80\00\01\01"
    "\04\84\80\80\80\00\01\6f\00\00\0a\8f\80\80\80\00"
    "\01\89\80\80\80\00\00\41\00\41\00\11\00\00\0b"
  )
""
)